@@ -5,6 +5,9 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
 and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].
 
 == [Unreleased]
+=== Fixed
+
+* Allow detection of deep and multiple cycles in a node system.
 
 == [0.3.0] - 2018-10-11
 === Added
